# accounts/internal/server/http.go
@@ -1,0 +1,32 @@
+package server
+
+import (
+	"accountsapi/accounts/internal/conf"
+	"accountsapi/accounts/internal/service"
+	"accountsapi/api/accounts"
+
+	"github.com/go-kratos/kratos/v2/log"
+	"github.com/go-kratos/kratos/v2/middleware/recovery"
+	"github.com/go-kratos/kratos/v2/transport/http"
+)
+
+// NewHTTPServer new an HTTP server.
+func NewHTTPServer(c *conf.Server, accountsservice *service.AccountsService, logger log.Logger) *http.Server {
+	var opts = []http.ServerOption{
+		http.Middleware(
+			recovery.Recovery(),
+		),
+	}
+	if c.Http.Network != "" {
+		opts = append(opts, http.Network(c.Http.Network))
+	}
+	if c.Http.Addr != "" {
+		opts = append(opts, http.Address(c.Http.Addr))
+	}
+	if c.Http.Timeout != nil {
+		opts = append(opts, http.Timeout(c.Http.Timeout.AsDuration()))
+	}
+	srv := http.NewServer(opts...)
+	accounts.RegisterAccountsHTTPServer(srv, accountsservice)
+	return srv
+}
